--- a/package.json
+++ b/package.json
@@ -38,6 +38,24 @@
             "xxl": {
                 "width": 2000
             }
+        },
+        "custom": {
+            "title_font": {
+                "type": "select",
+                "options": ["Modern sans-serif", "Elegant serif"],
+                "default": "Modern sans-serif"
+            },
+            "body_font": {
+                "type": "select",
+                "options": ["Modern sans-serif", "Elegant serif"],
+                "default": "Elegant serif"
+            },
+            "feature_image_width": {
+                "type": "select",
+                "options": ["Full", "Wide", "Small"],
+                "default": "Small",
+                "group": "post"
+            }
         }
     }
 }
