Added about page URLs to the themes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "theme",
         "ghost-theme"
     ],
+    "docs": "https://bulletin.ghost.io/about/",
     "config": {
         "posts_per_page": 1,
         "image_sizes": {
