feat: set background_position as custom site parameter
files
=====
- package.json
  parameter setup
- partials/background-cover.hbs
  parameter use

--- a/package.json
+++ b/package.json
@@ -57,7 +57,12 @@
                 "options": ["Full", "Wide", "Small"],
                 "default": "Small",
                 "group": "post"
-            }
+            },
+            "background_position": {
+                "type": "text",
+                "default": "left 25%",
+                "description": "The background position for the site cover image used in post menu"
+            }                           
         }
     },
     "scripts": {
